--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">cats</li>
+              <li data-filter=".filter-card">dogs</li>
+              <li data-filter=".filter-web">others</li>
             </ul>
           </div>
         </div>
