--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <img src="assets/img/dogo.png" width="70%">
-            <h3><a href="">Stories</a></h3>
+            <h3><a href="#portfolio">Stories</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
