--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
             <p class="fst-italic">
-              Qui inserirei due righe su come è nata l'idea, di fianco potremmo sfruttare l'immagine per inserire una conceptual map.
+            <b>Qui inserirei due righe su come è nata l'idea, di fianco potremmo sfruttare l'immagine per inserire una conceptual map.</b></br>
+            Wanted is a project inspired by a corpus of pet lost advertisement photographs collected over the years in various places. The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.
+            At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.</br>
+            Each user can have the option to upload and share their own story or simply link that of others.</br>
+            In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted, through these, to consecrate their emotional ties with their animal.  
             </p>
             <h3>Titolo da definire</h3>
             <p>
