--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Gp Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Wanted" name="description">
+  <meta content="Art, Photograph, Pets, Love, Memories" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Gp<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -134,14 +134,15 @@
             <h3>About</h3>
             <p class="fst-italic">
             <b>Qui inserirei due righe su come è nata l'idea, di fianco potremmo sfruttare l'immagine per inserire una conceptual map.</b></br>
-            Wanted is a project inspired by a corpus of pet lost advertisement photographs collected over the years in various places. The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.
-            At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.</br>
-            Each user can have the option to upload and share their own story or simply link that of others.</br>
-            In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted, through these, to consecrate their emotional ties with their animal.  
+            Wanted is a project inspired by a corpus of pet lost advertisement photographs collected over the years in various places.
             </p>
             <h3>Titolo da definire</h3>
             <p>
-              Qui invece specificherei il contesto culturale e gli obiettivi che vuole prefiggersi questo progetto.
+            <b>Qui invece specificherei il contesto culturale e gli obiettivi che vuole prefiggersi questo progetto.</b></br>
+            The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</br>
+            At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.</br>
+            Each user can have the option to upload and share their own story or simply link that of others.</br>
+            In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal.
             </p>
           </div>
         </div>
