--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -126,7 +126,14 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Project information=Gringo</h3>
+              <ul>
+                <li><strong>Name</strong>: Gringo</li>
+                <li><strong>Type</strong>: cat</li>
+                <li><strong>Lost in date</strong>: 01 March, 2020</li>
+                <li><strong>Lost in place</strong>: Cordoba (Argentina)</li>
+                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              </ul>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: ASU Company</li>
@@ -137,6 +144,7 @@
             <div class="portfolio-description">
               <h2>This is an example of portfolio detail</h2>
               <p>
+                My children are uded to play a lot with Gringo. We welcomed him 3 years ago and he brought a lot fo joy in our family. This photograph have been taken in Christmas time when we gift him with a <span style="color:#008000; font:bold;">green collar</span>.</br>Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
             </div>
