--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gp Bootstrap Template - Index</title>
+  <title>Wanted - Index</title>
   <meta content="Wanted" name="description">
   <meta content="Art, Photograph, Pets, Love, Memories" name="keywords">
 
