--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -108,16 +108,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!--div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
-                </div>
+                </div-->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -128,10 +128,10 @@
             <div class="portfolio-info">
               <h3>Gringo (project information=1 pagina per foto)</h3>
               <ul>
-                <li><strong>Name</strong>: Gringo</li>
-                <li><strong>Type</strong>: cat</li>
+                <li><strong>Name</strong>: Luli</li>
+                <li><strong>Type</strong>: dog</li>
                 <li><strong>Lost in date</strong>: 01 March, 2020</li>
-                <li><strong>Lost in place</strong>: Cordoba (Argentina)</li>
+                <li><strong>Lost in place</strong>: Buenos Aires (Argentina)</li>
                 <!--li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
               <ul>
@@ -144,7 +144,7 @@
             <div class="portfolio-description">
               <h2>Our memory (This is an example of portfolio detail)</h2>
               <p>
-                My children are uded to play a lot with Gringo. We welcomed him 3 years ago and he brought a lot fo joy in our family. This photograph have been taken in Christmas time when we gift him with a <span style="color:#008000; font-weight:bold;">green collar</span>.</br>
+                Luli se perdiò ..... <!--span style="color:#008000; font-weight:bold;">green collar</span-->.</br>
                 <!--Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.-->
               </p>
             </div>
