--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <img src="assets/img/fioroni.png" width="70%">
-            <h3><a href="">Art</a></h3>
+            <h3><a href="stories.html">Art</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
