--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Enrica Zani</h4>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
@@ -586,13 +586,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Alisia Zarbo</h4>
                 <span>Product Manager</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <!--div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -626,7 +626,7 @@
                 <span>Accountant</span>
               </div>
             </div>
-          </div>
+          </div-->
 
         </div>
 
