--- a/index.html
+++ b/index.html
@@ -53,21 +53,36 @@
           <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#features"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="#"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Context</a></li>
+                  <li><a href="#">Concept</a></li>
+                  <li><a href="#">Goals</a></li>
+                  <li><a href="#">Requirements</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li class="dropdown"><a href="#"><span>Development</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">The story (include an interactive narrative using Twine)</a></li>
+                  <li><a href="#">Description of the interaction between the project and the users (include Interaction Diagram)</a></li>
+                  <li><a href="#">Development to reach the cognitive focus</a></li>
+                  <li><a href="#">Foreseen workflow (includes needed software, hardware, professionals)</a></li>
+                  <li><a href="#">Further development and maintenance issues</a></li>
+                </ul>
+              </li>
+              <li><a href="#team">Teams roles</a></li>
+              <li><a href="#">Bibliography</a></li>
+              <li class="dropdown"><a href="#"><span>Complementary Material for the Discussion</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">3d object or scene (3D)</a></li>
+                  <li><a href="#"> Trailer (video)</a></li>
+                  <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
+                </ul>
+              </li>
+              
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
