--- a/index.html
+++ b/index.html
@@ -50,27 +50,38 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#features"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Context</a></li>
-                  <li><a href="#">Concept</a></li>
-                  <li><a href="#">Goals</a></li>
-                  <li><a href="#">Requirements</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li class="dropdown"><a href="#">1. Context</a>
+                    <ul>
+                      <li><a href="#">(a) reference institution for your PW, with its institutional goals</a></li>
+                      <li><a href="#">(b) relevant CH assets (include raster images or/and panoramas)</a></li>
+                      <li><a href="#">(c) the location (in case of on-site application it will be the museum or monument)</a></li>
+                      <li><a href="#">(d) your target audience (with characteristics, motivations, capabilities and devices)</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown"><a href="#">2. Concept</a>
+                    <ul>
+                      <li><a href="#">(a) conceptual map</a></li>
+                      <li><a href="#">(b) museological approach</a></li>
+                      <li><a href="#">(c) experience design (from the users perspective) (include a diagram)</a></li>
+                      <li><a href="#">(d) the specific CH topic you have selected as case study for your PW</a></li>
+                      <li><a href="#">(e) the chosen cognitive focus (among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall)</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">3. Goals (cultural, cognitive, economic, educational etc.)</a></li>
+                  <li><a href="#">4. Requirements (to reach the goals)</a></li>               
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>Development</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">The story (include an interactive narrative using Twine)</a></li>
-                  <li><a href="#">Description of the interaction between the project and the users (include Interaction Diagram)</a></li>
-                  <li><a href="#">Development to reach the cognitive focus</a></li>
-                  <li><a href="#">Foreseen workflow (includes needed software, hardware, professionals)</a></li>
-                  <li><a href="#">Further development and maintenance issues</a></li>
+                  <li><a href="#">a) The story (include an interactive narrative using Twine)</a></li>
+                  <li><a href="#">b) Description of the interaction between the project and the users (include Interaction Diagram)</a></li>
+                  <li><a href="#">c) Development to reach the cognitive focus</a></li>
+                  <li><a href="#">d) Foreseen workflow (includes needed software, hardware, professionals)</a></li>
+                  <li><a href="#">e) Further development and maintenance issues</a></li>
                 </ul>
               </li>
               <li><a href="#team">Teams roles</a></li>
@@ -82,9 +93,11 @@
                   <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
                 </ul>
               </li>
-              
             </ul>
           </li>
+          <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
