--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#features"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+          <li class="dropdown"><a href="PWBD.html"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
+            <!--ul>
               <li class="dropdown"><a href="#"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li class="dropdown"><a href="#">1. Context</a>
@@ -91,11 +91,11 @@
                   <li><a href="#">3d object or scene (3D)</a></li>
                   <li><a href="#"> Trailer (video)</a></li>
                   <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
-                </ul>
+                </ul-->
               </li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
+          <li><a class="nav-link scrollto" href="">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
