--- a/PWBD.html
+++ b/PWBD.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li class="dropdown"><a href="index.html#features"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href=""><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#Intro"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -123,7 +123,7 @@
           Example inner page template
         </p>
 		<div class="container" id="Context">
-			<h4>1. Context</h4>
+			<h4>1. Context ENRICA?</h4>
 			<p>....</p>
 			<h5>a) reference institution for your PW, with its institutional goals,</h5>
 			<p>....</p>
@@ -135,7 +135,7 @@
 			<p>....</p>	
 		</div>
 		<div class="container" id="Concept">
-			<h4>2. Concept</h4>
+			<h4>2. Concept ALISIA?</h4>
 			<p>....</p>
 			<h5>(a) conceptual map</h5>
 			<p>....</p>
@@ -149,17 +149,17 @@
 			<p>....</p>
 		</div>
 		<div class="container" id="Goals">
-			<h4>3. Goal (cultural, cognitive, economic, educational etc.)</h4>
+			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA?</h4>
 			<p>....</p>
 		</div>
 		<div class="container" id="Requirements">
-			<h4>4. Requirements (to reach the goals)</h4>
+			<h4>4. Requirements (to reach the goals) ENRICA?</h4>
 			<p>....</p>
 		</div>
       </div>
 
       <div class="container" id="Dev">
-	  <h3>Development</h3>
+	  <h3>Development DA ASSEGNARE cos'è twine???</h3>
         <p>...</p>
 			<h5>(a) The story (include an interactive narrative using Twine)</h5>
 			<p>....</p>
@@ -180,7 +180,7 @@
 	</div>
 	
 	<div class="container" id="Bib">
-	  <h3>Bibliography</h3>
+	  <h3>Bibliography ENRICA</h3>
         <p>...</p>
 	</div>
 
@@ -188,7 +188,7 @@
 	  <h3>Complementary Material for the Discussion</h3>
       <p>...</p>
 		<h4>3d object or scene (3D)</h4>
-		<p>....</p>
+		<p><b>CHE DICI SE VEDIAMO SE POSSIAMO FAR FARE UN MODELLINO 3D DEL PER PERDUTO CHE UNO SI REALIZZA E SI PORTA A CASA TIPO STATUINA DEL PRESEPE??</p>
 		<h4>Trailer (video)</h4>
 		<p>....</p>			
 		<h4>Audio (i.e. interviews of your potential users)</h4>
