--- a/PWBD.html
+++ b/PWBD.html
@@ -93,7 +93,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="stories.html" class="get-started-btn scrollto">Enter the exhibition!</a>
 
     </div>
   </header><!-- End Header -->
