--- a/PWBD.html
+++ b/PWBD.html
@@ -130,7 +130,11 @@
 			<h5>(b) relevant CH assets (include raster images or/and panoramas)</h5>
 			<p>....</p>
 			<h5>(c) the location (in case of on-site application it will be the museum or monument)</h5>
-			<p>....</p>
+			<p>The museum is in the two cathegories:</br>
+	      		4.Virtual with real: in this category the researchers have identified a type of virtual museum that they define as a digital space built with the use of technology. This virtual space can shape a real space or an ideal space shaped for virtual exhibition. What identifies the virtual museum is that the objects shown are real objects that have been digitalised for display in a virtual space to be better studied or browsed.</r>
+	    		5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</br>
+	  		(Beltramini and Gaiani, 2012: 60).
+	  		</p>
 			<h5>(d) your target audience (with characteristics, motivations, capabilities and devices)</h5>
 			<p>....</p>	
 		</div>
