--- a/PWBD.html
+++ b/PWBD.html
@@ -144,7 +144,10 @@
 			<h5>(a) conceptual map</h5>
 			<p>....</p>
 			<h5>(b) museological approach</h5>
-			<p>....</p>
+			<p>Cathegory E or F of Caraceni taxonomy:</br>
+			</br>E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
+			</br>F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs...OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
+
 			<h5>(c) experience design (from the users perspective) (include a diagram)</h5>
 			<p>....</p>
 			<h5>(d) the specific CH topic you have selected as case study for your PW</h5>
