--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>!</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -91,9 +91,9 @@
                   <li><a href="#">3d object or scene (3D)</a></li>
                   <li><a href="#"> Trailer (video)</a></li>
                   <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
-                </ul-->
+                </ul>
               </li>
-            </ul>
+            </ul-->
           </li>
           <li><a class="nav-link scrollto" href="">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -103,7 +103,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="stories.html" class="get-started-btn scrollto">Enter the exhibithion!</a>
 
     </div>
   </header><!-- End Header -->
