--- a/PWBD.html
+++ b/PWBD.html
@@ -81,9 +81,9 @@
                   <li><a href="#">3d object or scene (3D)</a></li>
                   <li><a href="#"> Trailer (video)</a></li>
                   <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
-                </ul-->
+                </ul>
               </li>
-            </ul>
+            </ul-->
           </li>
           <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
           <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li>
@@ -145,8 +145,17 @@
 			<p>....</p>
 			<h5>(b) museological approach</h5>
 			<p>Cathegory E or F of Caraceni taxonomy:</br>
-			</br>E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
-			</br>F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs...OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
+			E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
+			F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
+			
+			<table>
+			<tr><td>NEED</td><td>Interpretaton - Experimentation/complex museum identity</td></tr>
+			<tr><td>INTERACTION</td><td>Open</td></tr>
+			<tr><td>SPACE</td><td>Open</td></tr>
+			<tr><td>CONTENT</td><td>Selected works - Photograph, texts, geo-referenced material</td></tr>
+			<tr><td>VIRTUAL/REAL</td><td>Virtual with real/Virtual with virtual</td></tr>
+			<tr><td>VISITORS CONTRIBUTIONS</td><td>Allowed</td></tr>
+			</table>
 
 			<h5>(c) experience design (from the users perspective) (include a diagram)</h5>
 			<p>....</p>
@@ -188,6 +197,10 @@
 	
 	<div class="container" id="Bib">
 	  <h3>Bibliography ENRICA</h3>
+		<ul>
+		<li><i class=title>Dogs & Cats in Art Wednesday, 22nd January 1997</i>. London: Bonhams, 1996. https://almastart.unibo.it/permalink/f/10694hg/39UBO_SEBINA_DSUBO3965883</li>
+		<li>Haraway. <i class=title>The Companion Species Manifesto: Dogs, People, and Significant Otherness</i>, 2003
+		</ul>
         <p>...</p>
 	</div>
 
