--- a/PWBD.html
+++ b/PWBD.html
@@ -201,6 +201,7 @@
 		<li><i class=title>Dogs & Cats in Art Wednesday, 22nd January 1997</i>. London: Bonhams, 1996. https://almastart.unibo.it/permalink/f/10694hg/39UBO_SEBINA_DSUBO3965883</li>
 		<li>Haraway. <i class=title>The Companion Species Manifesto: Dogs, People, and Significant Otherness</i>, 2003</li>
 		<li>Barbara Amadasi. "Animal Farm." <i class=title>Vogue (Italia)</i>, no. 716 (2010): 74. https://almastart.unibo.it/permalink/f/pt4j7f/TN_cdi_proquest_miscellaneous_1847846888</li>
+		<li>Fioroni, Giosetta. <i class=title>Dog</i>. Corraini, 2010.</li>
 		</ul>
         <p>...</p>
 	</div>
