--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="stories.html" class="get-started-btn scrollto">Enter the exhib!</a>
+      <a href="stories.html" class="get-started-btn scrollto">Enter the exhibit</a>
 
     </div>
   </header><!-- End Header -->
