--- a/PWBD.html
+++ b/PWBD.html
@@ -123,9 +123,10 @@
           Example inner page template
         </p>
 		<div class="container" id="Context">
-			<h4>1. Context ENRICA?</h4>
-			<p>....</p>
-			<h5>a) reference institution for your PW, with its institutional goals,</h5>
+			<h4>1. Context ---- ENRICA</h4>
+			<p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
+			The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.</p>
+			<h5>(a) reference institution for your PW, with its institutional goals</h5>
 			<p>....</p>
 			<h5>(b) relevant CH assets (include raster images or/and panoramas)</h5>
 			<p>....</p>
@@ -139,7 +140,7 @@
 			<p>....</p>	
 		</div>
 		<div class="container" id="Concept">
-			<h4>2. Concept ALISIA?</h4>
+			<h4>2. Concept -------- ALISIA</h4>
 			<p>....</p>
 			<h5>(a) conceptual map</h5>
 			<p>....</p>
@@ -192,6 +193,56 @@
 	
 	<div class="container" id="tr">
 	  <h3>Teams roles</h3>
+		    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Team</h2>
+          <p>Check our Team</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Enrica Zani</h4>
+                <span>Chief Executive Officer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Alisia Zarbo</h4>
+                <span>Product Manager</span>
+              </div>
+            </div>
+          </div>
+		
+	 </div>
+    	</div>
+	</section>
         <p>rimanda al team generale, correggi nome sez...</p>
 	</div>
 	
