--- a/PWBD.html
+++ b/PWBD.html
@@ -119,13 +119,11 @@
 	
       <div class="container" id="Intro">
 	  <h3>Introduction</h3>
-        <p>
-          Example inner page template
-        </p>
+          <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
+	     The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
+	  </p>
 		<div class="container" id="Context">
 			<h4>1. Context ---- ENRICA</h4>
-			<p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
-			The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.</p>
 			<h5>(a) reference institution for your PW, with its institutional goals</h5>
 			<p>....</p>
 			<h5>(b) relevant CH assets (include raster images or/and panoramas)</h5>
