--- a/PWBD.html
+++ b/PWBD.html
@@ -252,6 +252,7 @@
 		<li>Barbara Amadasi. "Animal Farm." <i class=title>Vogue (Italia)</i>, no. 716 (2010): 74. https://almastart.unibo.it/permalink/f/pt4j7f/TN_cdi_proquest_miscellaneous_1847846888</li>
 		<li>Fioroni, Giosetta. <i class=title>Dog</i>. Corraini, 2010.</li>
 		<li>https://www.albludiprussia.com/giosetta-fioroni-e-linvenzione-della-famiglia/</li>
+		<li>Boltanski, Christian, Fabio Malossi, Beppe Sebaste, Bologna, and Museo per La Memoria Di Ustica Bologna. <i class=title><a href="https://almastart.unibo.it/permalink/f/10694hg/39UBO_SEBINA_DSUBO2411850" target="_blank">Lista Degli Oggetti Personali Appartenuti Ai Passeggeri Del Volo IH 870</a></i>. S.l: S.n, 2007.</li>
 		</ul>
         <p>...</p>
 	</div>
