--- a/PWBD.html
+++ b/PWBD.html
@@ -124,8 +124,13 @@
 	  </p>
 		<div class="container" id="Context">
 			<h4>1. Context ---- ENRICA</h4>
-			<h5>(a) reference institution for your PW, with its institutional goals</h5>
-			<p>....</p>
+			<h5>Reference institutions<!-- for your PW, with its institutional goals--></h5>
+			<p>When we started thinking about this project, as said inspired by corpus of photographs similar to the ones in the <a href="index.html#portfolio">
+			stories section</a> the first visual references we thought about, had been memorials museums and installations such as the Boltansky work,
+			also visible in Bologna in the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> or the 
+			<a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a> or the 
+			initially spontaneous<a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a>.
+			</p>
 			<h5>(b) relevant CH assets (include raster images or/and panoramas)</h5>
 			<p>....</p>
 			<h5>(c) the location (in case of on-site application it will be the museum or monument)</h5>
