--- a/PWBD.html
+++ b/PWBD.html
@@ -122,16 +122,18 @@
           <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
 	     The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
 	  </p>
+	  <p>The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</br>
+	  At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data. Each user can have the option to upload and share their own story or simply link that of others.</br>
+	  In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal. 
+	  </p>
 		<div class="container" id="Context">
 			<h4>1. Context ---- ENRICA</h4>
 			<h5>Reference institutions<!-- for your PW, with its institutional goals--></h5>
-			<p>When we started thinking about this project, as said inspired by corpus of photographs similar to the ones in the <a href="index.html#portfolio">
-			stories section</a> the first visual references we thought about, had been memorials museums and installations such as the Boltansky work,
-			also visible in Bologna in the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> or the 
-			<a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a> or the 
-			initially spontaneous<a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a>.
+			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, similar to the ones in the <a href="index.html#portfolio">stories section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous<a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
+			All these insitutions are devoted to preserve the public testimony of historical facts as well as to celebrate the intimate memory of missed beloved-ones.</br>
+			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. For this part we explored some examples such as the institution mentioned by Simona Caraceni in her Mewselogy course slides (Hermitage cats army guards, Louvre cats, Louvre cats exhibition, Fatcatart.ru, Cat Museum Kotor and Cats Museum Malaysia) as well as by visually referring to artists and their pets such as Giosetta Fioroni and Biri, Fida Kahlo and Granizo, Henry Matisse and Minouche, etc.: on this second inspiration, we realized the <a href="stories.html">art section</a> conceived as a virtual exhibition.
 			</p>
-			<h5>(b) relevant CH assets (include raster images or/and panoramas)</h5>
+			<h5>Relevant assets (include raster images or/and panoramas)</h5>
 			<p>....</p>
 			<h5>(c) the location (in case of on-site application it will be the museum or monument)</h5>
 			<p>The museum is in the two cathegories:</br>
