--- a/PWBD.html
+++ b/PWBD.html
@@ -117,6 +117,26 @@
 
     <section class="inner-page">
 	
+	    
+	<ul>
+          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+          <li class="dropdown"><a href=""><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li class="dropdown"><a href="#Intro"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li class="dropdown"><a href="#Context">1. Context</a>
+                    <!--ul>
+                      <li><a href="#">(a) reference institution for your PW, with its institutional goals</a></li>
+                      <li><a href="#">(b) relevant CH assets (include raster images or/and panoramas)</a></li>
+                      <li><a href="#">(c) the location (in case of on-site application it will be the museum or monument)</a></li>
+                      <li><a href="#">(d) your target audience (with characteristics, motivations, capabilities and devices)</a></li>
+                    </ul-->
+                  </li>
+		<li class="dropdown"><a href="#Concept">2. Concept</a></li>
+		      </ul></li></ul></li>
+			
+
       <div class="container" id="Intro">
 	  <h3>Introduction</h3>
           <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
