--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </li-->
           <li><a class="nav-link scrollto" href="">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="stories.html#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="stories.html" class="get-started-btn scrollto">Enter the exhibit</a>
+      <a href="stories.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
   </header><!-- End Header -->
