--- a/PWBD.html
+++ b/PWBD.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Wanted - Project Work Design Brief</title>
-  <meta content="Wanted" name="description">
+  <title>Wanted! - Project Work Design Brief</title>
+  <meta content="Wanted!" name="description">
   <meta content="Art, Photograph, Pets, Love, Memories" name="keywords">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -33,7 +33,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-lg-between">
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>!</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -93,7 +93,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="stories.html" class="get-started-btn scrollto">Enter the exhibition!</a>
+      <a href="stories.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
   </header><!-- End Header -->
