--- a/index.html
+++ b/index.html
@@ -797,11 +797,10 @@
 
     <div class="container">
       <div>
-        <p><strong>Wanted!</strong> is a project developed for the final exam of <emph>Digital Heritage and Multimedia</emph> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
+        <p><strong>Wanted!</strong> is a project developed for the final exam of <emph>Digital Heritage and Multimedia</emph> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
+        <p><strong>Images comes .......</p>
       </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
-      </div>
+      <div class="copyright">Website template &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved</div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
