--- a/index.html
+++ b/index.html
@@ -744,12 +744,12 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>WANTED<span>!</span></h3>
-              <p>
+              <!--p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5589 55488 55<br>
                 <strong>Email:</strong> wanted@wanted.com<br>
-              </p>
+              </p-->
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -760,7 +760,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <!--div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -789,7 +789,7 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div-->
 
         </div>
       </div>
