--- a/PWBD.html
+++ b/PWBD.html
@@ -45,21 +45,21 @@
               <li class="dropdown"><a href="#Intro"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li class="dropdown"><a href="#Context">1. Context</a>
-                    <!--ul>
-                      <li><a href="#">(a) reference institution for your PW, with its institutional goals</a></li>
-                      <li><a href="#">(b) relevant CH assets (include raster images or/and panoramas)</a></li>
-                      <li><a href="#">(c) the location (in case of on-site application it will be the museum or monument)</a></li>
-                      <li><a href="#">(d) your target audience (with characteristics, motivations, capabilities and devices)</a></li>
-                    </ul-->
+                    <ul>
+                      <li><a href="#">a) reference institution and institutional goals</a></li>
+                      <li><a href="#">b) relevant CH assets</a></li>
+                      <li><a href="#">c) location</a></li>
+                      <li><a href="#">d) target audience</a></li>
+                    </ul>
                   </li>
                   <li class="dropdown"><a href="#Concept">2. Concept</a>
-                    <!--ul>
-                      <li><a href="#">(a) conceptual map</a></li>
-                      <li><a href="#">(b) museological approach</a></li>
-                      <li><a href="#">(c) experience design (from the users perspective) (include a diagram)</a></li>
-                      <li><a href="#">(d) the specific CH topic you have selected as case study for your PW</a></li>
-                      <li><a href="#">(e) the chosen cognitive focus (among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall)</a></li>
-                    </ul-->
+                    <ul>
+                      <li><a href="#">a) conceptual map</a></li>
+                      <li><a href="#">b) museological approach</a></li>
+                      <li><a href="#">c) experience design</a></li>
+                      <li><a href="#">d) specific CH topic you have selected as case study for your PW</a></li>
+                      <li><a href="#">e) chosen cognitive focus</a></li>
+                    </ul>
                   </li>
                   <li><a href="#Goals">3. Goals (cultural, cognitive, economic, educational etc.)</a></li>
                   <li><a href="#Requirements">4. Requirements (to reach the goals)</a></li>               
