--- a/PWBD.html
+++ b/PWBD.html
@@ -44,31 +44,31 @@
             <ul>
               <li class="dropdown"><a href="#Intro"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li class="dropdown"><a href="#Context">1. Context</a>
+                  <li class="dropdown"><a href="#Context">The Context</a>
                     <ul>
-                      <li><a href="#">a) reference institution and institutional goals</a></li>
-                      <li><a href="#">b) relevant CH assets</a></li>
-                      <li><a href="#">c) location</a></li>
-                      <li><a href="#">d) target audience</a></li>
+                      <li><a href="#">Reference institution and assets</a></li>
+                      <!--li><a href="#">b) relevant CH assets</a></li-->
+                      <li><a href="#">The location</a></li>
+                      <li><a href="#">The target audience</a></li>
                     </ul>
                   </li>
-                  <li class="dropdown"><a href="#Concept">2. Concept</a>
+                  <li class="dropdown"><a href="#Concept">The Concept</a>
                     <ul>
-                      <li><a href="#">a) conceptual map</a></li>
-                      <li><a href="#">b) museological approach</a></li>
-                      <li><a href="#">c) experience design</a></li>
-                      <li><a href="#">d) specific CH topic you have selected as case study for your PW</a></li>
-                      <li><a href="#">e) chosen cognitive focus</a></li>
+                      <li><a href="#">Conceptual map</a></li>
+                      <li><a href="#">The museological approach</a></li>
+                      <li><a href="#">Experience design</a></li>
+                      <li><a href="#">Specific CH topic selected as case study</a></li>
+                      <li><a href="#">Chosen cognitive focus</a></li>
                     </ul>
                   </li>
-                  <li><a href="#Goals">3. Goals (cultural, cognitive, economic, educational etc.)</a></li>
-                  <li><a href="#Requirements">4. Requirements (to reach the goals)</a></li>               
+                  <li><a href="#Goals">The Goals</a></li>
+                  <li><a href="#Requirements">The Requirements</a></li>               
                 </ul>
               </li>
               <li class="dropdown"><a href="#Dev"><span>Development</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">a) The story (include an interactive narrative using Twine)</a></li>
-                  <li><a href="#">b) Description of the interaction between the project and the users (include Interaction Diagram)</a></li>
+                  <li><a href="#">The story</a></li>
+                  <li><a href="#">Interaction Diagram</a></li>
                   <li><a href="#">c) Development to reach the cognitive focus</a></li>
                   <li><a href="#">d) Foreseen workflow (includes needed software, hardware, professionals)</a></li>
                   <li><a href="#">e) Further development and maintenance issues</a></li>
@@ -87,7 +87,7 @@
           </li>
           <li><a class="nav-link scrollto" href="stories.html">Services</a></li>
           <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -119,31 +119,46 @@
 
 	<div class="container" id="Intro">
 	  <h3>Introduction</h3>
-          <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
-	     The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
+      <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
+	  The name obviously comes from the strong visual relationship of these sos-flyers with the <cite>Old West</cite> bandit bans.</br>
+	  The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
 	  </p>
 	  <p>The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</br>
 	  At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data. Each user can have the option to upload and share their own story or simply link that of others.</br>
 	  In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal. 
 	  </p>
-		<div class="container" id="Context">
-			<h4>1. Context ---- ENRICA</h4>
-			<h5>Reference institutions<!-- for your PW, with its institutional goals--></h5>
-			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, similar to the ones in the <a href="index.html#portfolio">stories section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous<a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
+	  
+	  <div class="container" id="Context">
+	   	<h4>The Context</h4>
+		<div class="row">
+			<div class="container col-lg-6 col-md-6" id="RI">
+			<h5>Reference institutions and relevant assets<!-- for your PW, with its institutional goals/(include raster images or/and panoramas)--></h5>
+			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, similar to the ones in the <a href="index.html#portfolio">stories section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous <a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
 			All these insitutions are devoted to preserve the public testimony of historical facts as well as to celebrate the intimate memory of missed beloved-ones.</br>
-			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. For this part we explored some examples such as the institution mentioned by Simona Caraceni in her Mewselogy course slides (Hermitage cats army guards, Louvre cats, Louvre cats exhibition, Fatcatart.ru, Cat Museum Kotor and Cats Museum Malaysia) as well as by visually referring to artists and their pets such as Giosetta Fioroni and Biri, Fida Kahlo and Granizo, Henry Matisse and Minouche, etc.: on this second inspiration, we realized the <a href="stories.html">art section</a> conceived as a virtual exhibition.
-			</p>
-			<h5>Relevant assets (include raster images or/and panoramas)</h5>
-			<p>....</p>
-			<h5>(c) the location (in case of on-site application it will be the museum or monument)</h5>
-			<p>The museum is in the two cathegories:</br>
-	      		4.Virtual with real: in this category the researchers have identified a type of virtual museum that they define as a digital space built with the use of technology. This virtual space can shape a real space or an ideal space shaped for virtual exhibition. What identifies the virtual museum is that the objects shown are real objects that have been digitalised for display in a virtual space to be better studied or browsed.</r>
-	    		5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</br>
-	  		(Beltramini and Gaiani, 2012: 60).
+			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides (Hermitage cats army guards, <a href="https://bigcomicbros.net/work/6195/" target="_blank">Le chat du Louvre</a>, <a href="http://catsmuseum.org/" target="_blank">Cat Museum Kotor</a> and Cats Museum Malaysia) as well as by visually referring to artists and their pets such as <strong>Giosetta Fioroni and Biri</strong>, <strong>Frida Kahlo and Granizo</strong>, <strong>Henry Matisse and Minouche</strong>, etc.: on this second inspiration, we realized the <a href="stories.html">In Art</a> section, conceived as a virtual exhibition.</p>
+			<p>The overall context will be then possibly a physical museum hosting a temporary physical exhibiton on humans and artist and their pets relationship, that offers also the possibility to the visitors of having an online introduction - <a href="">In History</a> section - a further online exploration of the artists-pets relationship with contents not physically available in the museum - <a href="stories.html">In Art</a> section - an interactive part where loading and sharing their personal stories - <a href="index.html#portfolio">Your Stories</a> section - and possibly a tool able to help proactively people loosing their pets by visualizing geolocated shared data of missing pets - <a href="">Data</a> section.</p>
+			</div>
+			<div class="container col-lg-6 col-md-6">
+			<img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
+			<p>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></p></br>
+			<iframe src="stories.html"></iframe>
+            </div>
+		</div>
+		</div>
+		<div class="container">
+			<!--h5>Relevant assets (include raster images or/and panoramas)</h5>
+			<p>....</p-->
+			<h5>The location <!--(in case of on-site application it will be the museum or monument)--></h5>
+			<p>As already mentioned, even if a museum could be physically existent, our application is thought to be suitable also to be used totally online, and accordin to ??? (Beltramini and Gaiani, 2012: 60). and thus we can use to define it these two cathegories:</br>
+			<ul>
+			<ol>4.Virtual with real: in this category the researchers have identified a type of virtual museum that they define as a digital space built with the use of technology. This virtual space can shape a real space or an ideal space shaped for virtual exhibition. What identifies the virtual museum is that the objects shown are real objects that have been digitalised for display in a virtual space to be better studied or browsed.</ol>
+			<ol>5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</ol>
+	  		</ul>
 	  		</p>
-			<h5>(d) your target audience (with characteristics, motivations, capabilities and devices)</h5>
+			<h5>The target audience <!--(with characteristics, motivations, capabilities and devices)Personae e altro--></h5>
 			<p>....</p>	
 		</div>
+		
 		<div class="container" id="Concept">
 			<h4>2. Concept -------- ALISIA</h4>
 			<p>....</p>
@@ -250,11 +265,24 @@
 		</section>
 	
 	<div class="container" id="Bib">
-	  <h3>Bibliography ENRICA</h3>
+	  <h3>Bibliography</h3>
+	  <h4>Project</h4>
+		<ul>
+		<li>Caraceni taxonomy</li>
+		<li>Caraceni Mewseografy</li>
+		<li>Quelli della classificazione museale</li>
+		<li>Haraway. <i class=title>The Companion Species Manifesto: Dogs, People, and Significant Otherness</i>, 2003</li>
+		</ul>
+		
+		<h4>In History section (vedere se riusciamo a richiamare le bibliografie dei modals)</h4>
 		<ul>
 		<li>Arluke, Arnold., and Lauren. Rolfe. <i class=title>The Photographed Cat Picturing Human-Feline Ties 1890-1940</i>. First ed. 2013.</li>
 		<li><i class=title>Dogs & Cats in Art Wednesday, 22nd January 1997</i>. London: Bonhams, 1996. https://almastart.unibo.it/permalink/f/10694hg/39UBO_SEBINA_DSUBO3965883</li>
-		<li>Haraway. <i class=title>The Companion Species Manifesto: Dogs, People, and Significant Otherness</i>, 2003</li>
+		
+		</ul>
+	
+		<h4>In Art section</h4>
+		<ul>
 		<li>Barbara Amadasi. "Animal Farm." <i class=title>Vogue (Italia)</i>, no. 716 (2010): 74. https://almastart.unibo.it/permalink/f/pt4j7f/TN_cdi_proquest_miscellaneous_1847846888</li>
 		<li>Fioroni, Giosetta. <i class=title>Dog</i>. Corraini, 2010.</li>
 		<li>https://www.albludiprussia.com/giosetta-fioroni-e-linvenzione-della-famiglia/</li>
