--- a/PWBD.html
+++ b/PWBD.html
@@ -117,6 +117,7 @@
 
     <section class="inner-page">
 
+<!-- ======= Intro Section ======= -->  
 	<div class="container" id="Intro">
 	  <h3>Introduction</h3>
       <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
@@ -195,6 +196,7 @@
 		</div>
       </div>
 
+<!-- ======= Development Section ======= -->
       <div class="container" id="Dev">
 	  <h3>Development DA ASSEGNARE cos'è twine???</h3>
         <p>...</p>
@@ -210,16 +212,14 @@
 			<p>....</p>	
 		</div>
 	</div>
-	
-	<div class="container" id="tr">
-	  <h3>Teams roles</h3>
-		    <!-- ======= Team Section ======= -->
+
+  <!-- ======= Team Section ======= -->
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Check our Team</p>
+          <h2>Team roles</h2>
+          <!--p>Check our Team</p-->
         </div>
 
         <div class="row">
@@ -263,7 +263,9 @@
 	 </div>
     	</div>
 		</section>
-	
+
+<!-- ======= Bibliography Section ======= -->
+  	
 	<div class="container" id="Bib">
 	  <h3>Bibliography</h3>
 	  <h4>Project</h4>
@@ -291,6 +293,8 @@
         <p>...</p>
 	</div>
 
+<!-- ======= Complementary material Section ======= -->
+  
     <div class="container" id="Complementary">
 	  <h3>Complementary Material for the Discussion</h3>
       <p>...</p>
