--- a/PWBD.html
+++ b/PWBD.html
@@ -141,7 +141,7 @@
 			</div>
 			<div class="container col-lg-6 col-md-6">
 			<img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
-			<p>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></p></br>
+			<figcaption>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></figcaption></br>
 			<iframe src="stories.html" width="100%" height="30%"></iframe>
             </div>
 		</div>
