--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!--section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -664,7 +664,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section--><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
